# iai_mab_control

./: .gitignore  CMakeLists.txt  README.md  README_acquisition.md  README_photogrammetry.md  nohup.out  package.xml
app/: TODO.txt  server.py  settings.json  start.py
app/acquisition/: server.py
app/acquisition/htdocs/: index.html
app/acquisition/htdocs/assets/css/: style.css
app/acquisition/settings/: general.json  saved.json
app/assets/: index.html
app/htdocs/: index.html
app/htdocs/assets/js/: ajax.js  modal.js
app/photogrammetry/: server.py
app/photogrammetry/htdocs/: index.html
app/photogrammetry/settings/: general.json  saved.json
app/photogrammetry/settings/meshroom/: overrides.json  pipeline.mg
app/settings/: environment.json  general.json
app/settings/meshroom/: overrides.json
assets/: calibration_tool.stl  camera.stl
launch/: bringup.launch  keyboard_controller.launch  simulation.launch
models/: camera.stl
scripts/: Controller.py  Oracle.py  acquisition.py  calibration.py  camera.py  keyboard_controller.py  meshroom_cli.py  test.py
